# desloppify

./: .gitignore  README.md  SKILL.md  pyproject.toml
desloppify/: STRUCTURE.md  __init__.py  __main__.py  badge.py  cli.py  mcp_server.py  narrative.py  plan.py  scorecard.py  state.py  utils.py  visualize.py  zones.py
desloppify/commands/: __init__.py  dev_cmd.py  fix_cmd.py  next.py  plan_cmd.py  resolve.py  scan.py  show.py  status.py  zone_cmd.py
desloppify/detectors/: __init__.py  base.py  complexity.py  coupling.py  dupes.py  gods.py  graph.py  large.py  naming.py  orphaned.py  passthrough.py  signature.py  single_use.py
desloppify/fixers/: __init__.py  common.py  exports.py  if_chain.py  imports.py  logs.py  params.py  useeffect.py  vars.py
desloppify/lang/: __init__.py  base.py  commands_base.py
desloppify/lang/csharp/: README.md
desloppify/lang/python/: __init__.py  commands.py  complexity.py  deps.py  extractors.py  smells.py  unused.py
desloppify/lang/python/detectors/: deps.py  dict_keys.py
desloppify/lang/typescript/: __init__.py  commands.py  concerns.py  deprecated.py  deps.py  exports.py  extractors.py  logs.py  patterns.py  props.py  react.py  smells.py  unused.py
desloppify/lang/typescript/detectors/: _smell_helpers.py  deprecated.py  deps.py  exports.py  logs.py  react.py  smells.py
desloppify/tests/lang/common/: test_lang_test_layout.py
tests/: test_cmd_dev.py  test_lang_test_layout.py
