[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "desloppify"
version = "0.1.0"
description = "Multi-language codebase health scanner and technical debt tracker"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
desloppify = "desloppify.cli:main"

[tool.setuptools.packages.find]
include = ["desloppify*"]
